Add manuscript edits by Hao Ye
Co-authored-by: Hao Ye <lhopitalified@gmail.com>

--- a/paper.bib
+++ b/paper.bib
@@ -128,6 +128,16 @@
   doi={10.1002/ecy.3431}
 }
 
+@article{teal2015,
+  title={Data Carpentry: Workshops to Increase Data Literacy for Researchers},
+  author={Teal, Tracy K and Cranston, Karen A and Lapp, Hilmar and White, Ethan and Wilson, Greg and Ram, Karthik and Pawlik, Aleksandra},
+  journal={International Journal of Digital Curation},
+  volume={10},
+  pages={135--143},
+  year={2015},
+  doi={10.2218/ijdc.v10i1.351}
+}
+
 @article{white2019,
   title={Developing an automated iterative near-term forecasting system for an ecological study},
   author={White, Ethan P and Yenni, Glenda M and Taylor, Shawn D and Christensen, Erica M and Bledsoe, Ellen K and Simonis, Juniper L and Ernest, SK Morgan},
@@ -149,6 +159,17 @@
   pages={139},
   year={2022},
   doi={10.21105/jose.00139}
+}
+
+@article{wilson2014,
+  title={Software Carpentry: lessons learned},
+  author={Wilson, Greg},
+  journal={F1000Research},
+  volume={3},
+  pages={62},
+  year={2014},
+  publisher={Faculty of 1000 Ltd},
+  doi={10.12688/f1000research.3-62.v2}
 }
 
 @article{wolkovich2014,
